--- a/templates/index.html
+++ b/templates/index.html
@@ -22,13 +22,19 @@
     <div class="col-md-4 col-md-offset-4">
       <table class="table table-hover table-striped table-condensed">
         <thead>
-        <th>Группа</th>
-        <th>Фамилия</th>
-        <th>Имя</th>
-        <th>Оценка</th>
+        <tr>
+          <th>Группа</th>
+          <th>Фамилия</th>
+          <th>Имя</th>
+          <th>Оценка</th>
+        </tr>
         </thead>
         {% for row in table %}
-          <tr class="{{ 'success' if row[3] >= 4 else ('warning' if row[3] == 3 else 'danger') }}">
+          <tr class="{{
+                  'success' if row[3] >= 4 else (
+                  'warning' if row[3] == 3 else
+                  'danger')
+                  }}">
             {% for cell in row %}
 
               <td>{{ cell }}</td>
