--- a/templates/index.html
+++ b/templates/index.html
@@ -10,9 +10,14 @@
   <script src="{{ url_for('static', filename='jquery-3.2.1.min.js') }} "></script>
   <!-- Bootstrap -->
   <link href="{{ url_for('static', filename='bootstrap.min.css') }}" rel="stylesheet">
+
   <link href="{{ url_for('static', filename='loader.css') }}" rel="stylesheet">
   <link href="{{ url_for('static', filename='table.css') }}" rel="stylesheet">
+
+  <link href="{{ url_for('static', filename='sortable-theme-bootstrap.css') }}" rel="stylesheet">
+
   <script src="{{ url_for('static', filename='bootstrap.min.js') }} "></script>
+  <script src="{{ url_for('static', filename='sortable.min.js') }}"></script>
 
 
 </head>
@@ -23,9 +28,10 @@
   </div>
   <div class="row" id="first-row">
 <div class="progress-line" id="loader"></div>
-    <div class="col-md-4 col-md-offset-4">
+    <div class="col-md-6 col-md-offset-3">
 
-      <table class="table table-hover table-striped table-condensed" id="results-table">
+      <table class="sortable-theme-bootstrap table table-striped table-hover"
+             id="results-table" data-sortable>
         <thead>
         <tr>
           <th>Группа</th>
