--- a/templates/index.html
+++ b/templates/index.html
@@ -7,17 +7,15 @@
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <title>Результаты</title>
   <!--JQuery-->
-  <script src="{{ url_for('static', filename='jquery-3.2.1.min.js') }} "></script>
+  <script src="{{ url_for('static', filename='js/jquery-3.2.1.min.js') }} "></script>
   <!-- Bootstrap -->
-  <link href="{{ url_for('static', filename='bootstrap.min.css') }}" rel="stylesheet">
+  <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
+  <link href="{{ url_for('static', filename='css/loader.css') }}" rel="stylesheet">
+  <link href="{{ url_for('static', filename='css/table.css') }}" rel="stylesheet">
+  <link href="{{ url_for('static', filename='css/sortable-theme-bootstrap.css') }}" rel="stylesheet">
 
-  <link href="{{ url_for('static', filename='loader.css') }}" rel="stylesheet">
-  <link href="{{ url_for('static', filename='table.css') }}" rel="stylesheet">
-
-  <link href="{{ url_for('static', filename='sortable-theme-bootstrap.css') }}" rel="stylesheet">
-
-  <script src="{{ url_for('static', filename='bootstrap.min.js') }} "></script>
-  <script src="{{ url_for('static', filename='sortable.min.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/bootstrap.min.js') }} "></script>
+  <script src="{{ url_for('static', filename='js/sortable.min.js') }}"></script>
 
 
 </head>
@@ -30,7 +28,7 @@
 <div class="progress-line" id="loader"></div>
     <div class="col-md-6 col-md-offset-3">
 
-      <table class="sortable-theme-bootstrap table table-striped table-hover"
+      <table class="sortable-theme-bootstrap table table-condensed table-striped table-hover"
              id="results-table" data-sortable>
         <thead>
         <tr>
@@ -46,6 +44,6 @@
     </div>
   </div>
 </div>
-<script src="{{ url_for('static', filename='table.js') }}" type="application/javascript"></script>
+<script src="{{ url_for('static', filename='js/table.js') }}" type="application/javascript"></script>
 </body>
 </html>
